objects/WT_Opportunity_Stage_History__c.object
<CustomObject>
    <fields>
        <fullName>WT_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_CloseDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OpportunityStageHistories</relationshipLabel>
        <relationshipName>OpportunityStageHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WT_StageName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StageName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Opportunity Stage History</label>
    <nameField>
        <displayFormat>Stage History-{0000}</displayFormat>
        <label>Opportunity Stage History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityStageHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>WT_Opportunity_Id_Not_Null</fullName>
        <active>true</active>
        <description>As per SGE-310, Remove the Lookup field  restriction of mandatory from the opportunityId field and create a VR for mandatory OpportunityId while creating an opportunity</description>
        <errorConditionFormula>AND( ISNEW(),ISBLANK( WT_OpportunityId__c))</errorConditionFormula>
        <errorMessage>Opportunity Id is a mandatory field!!!</errorMessage>
    </validationRules>
</CustomObject>